refactor: simplify definition and scraper repository
